# t3code

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TAURI_SETUP_FIXES.md  cc-cli.md  cc-vscode-extension.md  file-explorer-implementation.md  file-explorer-issues-implementation-plan.md  package.json  plan-implement-slash-command-autocomplete-system-in-t3-code.md  plan-vscode-style-workspaces-for-t3code.md
.docs/: claude-agent-sdk-typescript-distilled.md  claude-support-plan.md  codex-app-server-jsonrpc-protocol.md  codex-typescript-sdk-usage-and-api.md
.github/workflows/: ci.yml  release.yml
.plans/: plan-vs-code-style-activity-bar-for-sidebar.md
apps/desktop/: package.json
apps/desktop/scripts/: smoke-test.mjs
apps/desktop/src/: main.ts
apps/renderer/src/: wsNativeApi.test.ts  wsNativeApi.ts
apps/server/: package.json
apps/server/integration/: OrchestrationEngineHarness.integration.ts
apps/server/src/: server.test.ts  server.ts  workspaceEntries.ts  ws.ts  wsServer.ts
apps/t3/scripts/: smoke-test.mjs
apps/t3/src/: cli.test.ts  runtimeApiServer.test.ts
apps/tauri-desktop/: README.md  package.json  tsconfig.json
apps/tauri-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/tauri-desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: composer-editor-mentions.test.ts  composer-editor-mentions.ts  composer-logic.test.ts  composer-logic.ts  composerDraftStore.test.ts  composerDraftStore.ts  (+10 more)
docs/: claude-agent-sdk.md  codex-communication.md
scripts/: desktop-perf-trace.mjs
(+57 files in other folders)
